# agents-os

./: .env.deploy  .env.example  .gitignore  API_DOCUMENTATION.md  COMANDOS_CURL.md  DEPENDENCIES_COMPATIBILITY.md  DEPLOY.md  DEPLOY_GUIDE.md  DEPLOY_INSTRUCTIONS.md  DOCUMENTACAO_FINAL.md  Dockerfile  FIX_OPENAI_DEPLOY.md  MEMORIA_SISTEMA.md  README_COMPLETO.md  RELATORIO_CORRECAO_OPENAI.md  RELATORIO_FINAL_COMPLETO.md  RELATORIO_FINAL_SISTEMA_LIMPO.md  RELATORIO_MIGRACAO_SUPABASE.md  RELATORIO_TESTES_VERTEX.md  TABELAS_SUPABASE_RELATORIO.md  agent_run_test.json  agent_test.json  agente_completo.py  agentos_main.py  agents.py  agno_memory_example.py  agno_memory_service.py  analyze_63_seconds.py  analyze_memory_test.py  analyze_performance.py  api.py  api_completa.py  api_teste_gemini.py  api_teste_supabase.py  body.json  build_and_test.ps1  build_and_test.sh  check_agents.py  check_agents_models.py  check_agno_modules.py  (+181 more)
