[tool.poetry]
name = "agnos"
version = "1.0.0"
description = "Sistema de Agentes com AgentOS"
authors = ["User <user@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
openai = "^1.3.0"
mem0ai = "^0.1.0"
pinecone-client = "^3.0.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"