[tool.poetry]
name = "agentos"
version = "0.1.0"
description = "AgentOS - Sistema operacional para agentes inteligentes"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "agentos"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.2"
uvicorn = {extras = ["standard"], version = "0.24.0"}
pydantic = "2.7.3"
python-dotenv = "1.0.1"
requests = "2.32.3"
openai = "1.33.0"
mem0ai = "0.1.0"
pinecone-client = "3.0.0"
numpy = "1.26.2"
pandas = "2.0.3"
loguru = "0.7.0"
gunicorn = "20.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
pytest-asyncio = "0.21.0"
black = "23.1.0"
flake8 = "6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
agentos = "agentos_main:main"